# jamstar

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
jamstar/: __main__.py  models.py  permissions.py  utils.py
src/jamstar/: __main__.py  exceptions.py  utils.py
