[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamstar"
version = "1.1.0"
authors = [{ name = "daav-dd" }]
maintainers = [{ name = "daav-dd" }]
license = "MIT"
description = "GTA5 Network Control Utility"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "keyboard",
    "psutil",
    "pywin32",
    "loguru",
]

[project.urls]
Homepage = "https://github.com/daav-dd/jamstar"
Issues = "https://github.com/daav-dd/jamstar/issues"

[project.scripts]
jamstar = "jamstar.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["jamstar"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
lines-between-types = 1
