[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jamstar"
module-root = ""

[project]
name = "jamstar"
version = "1.3.4"
authors = [{ name = "daav-dd" }]
maintainers = [{ name = "daav-dd" }]
license = "MIT"
description = "GTA5 Network Control Utility"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "keyboard>=0.13.5",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "pywin32>=311",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]
stubs = [
    "types-keyboard>=0.13.2.20240310",
    "types-psutil>=7.0.0.20250601",
    "types-pywin32>=310.0.0.20250516",
]

[project.scripts]
jamstar = "jamstar.__main__:main"

[project.urls]
Homepage = "https://github.com/daav-dd/jamstar"
Issues = "https://github.com/daav-dd/jamstar/issues"

[tool.ruff]
line-length = 120

# https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
follow_imports = "silent"
strict = true
disallow_untyped_defs = false
untyped_calls_exclude = "jamstar"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
lines-between-types = 1
